--- a/api/package.json
+++ b/api/package.json
@@ -15,8 +15,12 @@
     "nodemon": "^2.0.12"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-validator": "^6.12.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "winston": "^3.3.3"
   }
 }
